chore: make API URL and CORS allowed origins configurable for deployment